# fastlyzer

./: LICENSE.txt  README.md  pyproject.toml
example/: main.py
fastlyzer/: __init__.py  fastlyzer.py
