[project]
name = "fastlyzer"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "organic-nailer", email = "hykwyuk0125@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=1.26.4",
    "polars>=1.21.0",
    "scikit-learn>=1.6.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
